@@ -1540,4 +1540,7 @@
 	  modem in nsh.  From  Vladimir Komendantskiy (2019-01-31).
 	* apps/system/ubloxmodem:  Moved the modem application from
 	  examples/ to system/ (2016-01-31).
+	* apps/system/i2c:  The I2C tool now obeys it OS interfacing:
+	  it now uses an I2C character driver to access the I2C bus
+	  (2016-02-02).
 
